# mcp-extras

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: hello_world.py  test_client.py  webhook_server.py
src/mcp_approval_proxy/: __init__.py  __main__.py  audit.py  config.py  decorators.py  engines.py  middleware.py  proxy.py  transports.py
src/mcp_approval_proxy/channels/: __init__.py  base.py  cli.py  elicitation.py  webhook.py  whatsapp.py
src/mcp_extras/: __init__.py  __main__.py  channel.py  config.py  decorators.py  engines.py  errors.py  middleware.py  proxy.py
src/mcp_extras/channels/: __init__.py  base.py  webhook.py
tests/: test_audit.py  test_channel.py  test_channels_legacy.py  test_cli.py  test_config.py  test_decorators.py  test_engines.py  test_integration.py  test_middleware.py  test_proxy_transports.py  test_waha_engine.py  test_webhook_engine.py
