[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-approval-proxy"
version = "0.1.0"
description = "Transparent MCP proxy that intercepts write/destructive tool calls and requests approval via configurable channels"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
approval-proxy = "mcp_approval_proxy.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_approval_proxy"]

[tool.uv]
dev-dependencies = []
