[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-approval-proxy"
version = "0.2.0"
description = "Transparent MCP proxy that gates write/destructive tool calls behind MCP-native elicitation approval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "proxy", "approval", "elicitation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
approval-proxy = "mcp_approval_proxy.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_approval_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "TCH"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments
    "SIM108", # ternary operator — sometimes less readable
    "TC001",  # move app import to TYPE_CHECKING — false positive for runtime use
    "TC003",  # move stdlib import to TYPE_CHECKING — false positive for runtime use
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert in tests is fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
